--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <form
   x-data='{"ctl00$MainContent$GenderOptions":[{"Item1":0,"Item2":"Male"},{"Item1":1,"Item2":"Female"},{"Item1":3,"Item2":"Other"}],"ctl00$MainContent$Firstname":"David","ctl00$MainContent$Lastname":"Gardner","ctl00$MainContent$Zipcode":22963,"ctl00$MainContent$Gender":"0"}'>
   <div>
-    <aegis-editable-list x-model='ctl00$MainContent$GenderOptions'></aegis-editable-list>
+    <aeg-masked-input name='ctl00$MainContent$Firstname' x-model='ctl00$MainContent$Firstname'></aeg-masked-input>
   </div>
 </form>
 </body>
