created validation-message component

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,27 @@
 
   <script type='module' src='https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js'></script>
   <script nomodule src='https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine-ie11.min.js' defer></script>
+
+  <style>
+    .form-controls {
+      display: flex;
+    }
+
+    label {
+      margin-right: 5px;
+    }
+  </style>
 </head>
 <body>
 <form
   x-data='{"ctl00$MainContent$GenderOptions":[{"Item1":0,"Item2":"Male"},{"Item1":1,"Item2":"Female"},{"Item1":3,"Item2":"Other"}],"ctl00$MainContent$Firstname":"David","ctl00$MainContent$Lastname":"Gardner","ctl00$MainContent$Zipcode":22963,"ctl00$MainContent$Gender":"0"}'>
   <div>
-    <aeg-masked-input name='ctl00$MainContent$Firstname' x-model='ctl00$MainContent$Firstname'></aeg-masked-input>
+    <div class='form-controls'>
+      <label for='firstName'>Name: </label>
+      <aeg-validation-message message='Name is too long.' position='top' >
+        <input id='firstName' name='firstName' type='text' value='Zah'>
+      </aeg-validation-message>
+    </div>
   </div>
 </form>
 </body>
